@@ -12,7 +12,7 @@
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.upgrade_11_to_20b1"
         />
-        
+
     <genericsetup:upgradeStep
         source="2.0b1"
         destination="2.0"
@@ -21,7 +21,7 @@
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.null_upgrade_step"
         />
-        
+
     <genericsetup:upgradeStep
         source="2.0"
         destination="2.1b1"
@@ -30,7 +30,7 @@
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.null_upgrade_step"
         />
-        
+
     <genericsetup:upgradeStep
         source="2.1b1"
         destination="2.1b2"
@@ -39,7 +39,7 @@
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.null_upgrade_step"
         />
-        
+
     <genericsetup:upgradeStep
         source="2.1b2"
         destination="2.1b3"
@@ -48,7 +48,7 @@
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.null_upgrade_step"
         />
-        
+
     <genericsetup:upgradeStep
         source="2.1b3"
         destination="10"
@@ -56,6 +56,15 @@
         description=""
         profile="Products.Carousel:default"
         handler="Products.Carousel.upgrades.upgrade_21b3_to_10"
+        />
+
+    <genericsetup:upgradeStep
+        source="10"
+        destination="11"
+        title="Reimport typeinfo"
+        description="content_icon: document_icon.gif -> document_icon.png"
+        profile="Products.Carousel:default"
+        handler="Products.Carousel.upgrades.reimport_typeinfo"
         />
 
 </configure>
