@@ -6,6 +6,7 @@ Change history
 
 - Added German translation.
   [pabo3000]
+- Updated icon for content type: Carousel Banner. [taito]
 
 
 2.2.1 (2013-03-15)
